k8s/ingress.in.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: up
  namespace: web
spec:
  rules:
  - host: "$DOMAIN"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: up
            port:
              number: 8000
